plugins/binding/csharp/source/TellusimCSBase.cs

		
		public static readonly Color red = new Color(1.0f, 0.0f, 0.0f, 1.0f);
		public static readonly Color yellow = new Color(1.0f, 1.0f, 0.0f, 1.0f);
		public static readonly Color green = new Color(0.0f, 1.0f, 0.0f, 1.0f);
		public static readonly Color cyan = new Color(0.0f, 1.0f, 1.0f, 1.0f);
		public static readonly Color blue = new Color(0.0f, 0.0f, 1.0f, 1.0f);
		public static readonly Color magenta = new Color(1.0f, 0.0f, 1.0f, 1.0f);
		
		public float r, g, b, a;
	}
	
	/*****************************************************************************\
	 *
	 * ImageColor
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct ImageColor {
		
		public ImageColor(uint u) { r = u; g = u; b = u; a = u; }
		public ImageColor(uint l, uint a) { r = l; g = l; b = l; this.a = a; }
		public ImageColor(uint r, uint g, uint b, uint a) { this.r = r; this.g = g; this.b = b; this.a = a; }
		public ImageColor(in Vector4i v) { r = (uint)v.x; g = (uint)v.y; b = (uint)v.z; a = (uint)v.w; }
		public ImageColor(in Vector4u v) { r = v.x; g = v.y; b = v.z; a = v.w; }
		public ImageColor(in Vector4f v) { ImageColor ret = new ImageColor(); tsImageColor_set_f(ref ret, in v); r = ret.r; g = ret.g; b = ret.b; a = ret.a; }
		public ImageColor(in Color c) { ImageColor ret = new ImageColor(); tsImageColor_set_f(ref ret, in c); r = ret.r; g = ret.g; b = ret.b; a = ret.a; }
		public ImageColor(in Color c, Format format) { ImageColor ret = new ImageColor(); tsImageColor_set_c(ref ret, in c, format); r = ret.r; g = ret.g; b = ret.b; a = ret.a; }
		public ImageColor(in ImageColor c) { r = c.r; g = c.g; b = c.b; a = c.a; }
		public ImageColor(in uint[] c) { r = c[0]; g = c[1]; b = c[2]; a = c[3]; }
		
		public void set(in Vector4i v) { tsImageColor_set_i(ref this, in v); }
		public void get(ref Vector4i v) { tsImageColor_get_i(in this, ref v); }
		public void set(in Vector4u v) { tsImageColor_set_u(ref this, in v); }
		public void get(ref Vector4u v) { tsImageColor_get_u(in this, ref v); }
		public void set(in Vector4f v) { tsImageColor_set_f(ref this, in v); }
		public void get(ref Vector4f v) { tsImageColor_get_f(in this, ref v); }
		public void set(in Color c, Format format) { tsImageColor_set_c(ref this, in c, format); }
		public void get(ref Color c, Format format) { tsImageColor_get_c(in this, ref c, format); }
		
		public override string ToString() { return System.String.Format("({0} {1} {2} {3})", r, g, b, a); }
		
		[DllImport(Base.Import)] private static extern void tsImageColor_set_i(ref ImageColor c, in Vector4i src);
		[DllImport(Base.Import)] private static extern void tsImageColor_get_i(in ImageColor c, ref Vector4i dest);
		[DllImport(Base.Import)] private static extern void tsImageColor_set_u(ref ImageColor c, in Vector4u src);
		[DllImport(Base.Import)] private static extern void tsImageColor_get_u(in ImageColor c, ref Vector4u dest);
		[DllImport(Base.Import)] private static extern void tsImageColor_set_f(ref ImageColor c, in Vector4f src);
		[DllImport(Base.Import)] private static extern void tsImageColor_get_f(in ImageColor c, ref Vector4f dest);
		[DllImport(Base.Import)] private static extern void tsImageColor_set_f(ref ImageColor c, in Color src);
		[DllImport(Base.Import)] private static extern void tsImageColor_get_f(in ImageColor c, ref Color dest);
		[DllImport(Base.Import)] private static extern void tsImageColor_set_c(ref ImageColor c, in Color src, Format format);
		[DllImport(Base.Import)] private static extern void tsImageColor_get_c(in ImageColor c, ref Color dest, Format format);
		
		public uint r, g, b, a;
	}
	
	/*****************************************************************************\
	 *
	 * Bounds
	 *
	\*****************************************************************************/
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundRectf {
		
		public BoundRectf(in Vector2f min, in Vector2f max) { this.min = min; this.max = max; }
		public BoundRectf(in BoundRectf r) { min = r.min; max = r.max; }
		public BoundRectf(in BoundRectd r) { BoundRectf ret = new BoundRectf(); tsBoundRectf_set_brd(ref ret, in r); min = ret.min; max = ret.max; }
		public BoundRectf(in BoundCirclef c) { BoundRectf ret = new BoundRectf(); tsBoundRectf_set_bc(ref ret, in c); min = ret.min; max = ret.max; }
		
		public void expand(in Vector2f v) { tsBoundRectf_expand1(ref this, in v); }
		public void expand(in BoundRectf r) { tsBoundRectf_expand(ref this, in r); }
		
		public bool inside(in Vector2f v) { return tsBoundRectf_inside1(in this, in v); }
		public bool inside(in BoundRectf r) { return tsBoundRectf_inside(in this, in r); }
		
		public float distance(in Vector2f v) { return tsBoundRectf_distance(in this, in v); }
		
		public static BoundRectf operator*(in Matrix4x3f m, in BoundRectf r) { BoundRectf ret = new BoundRectf(); tsMatrix4x3f_mul_br(ref ret, in m, in r); return ret; }
		public static BoundRectf operator*(in Matrix4x4f m, in BoundRectf r) { BoundRectf ret = new BoundRectf(); tsMatrix4x4f_mul_br(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", min, max); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectf_set_brd(ref BoundRectf ret, in BoundRectd r);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectf_set_bc(ref BoundRectf ret, in BoundCirclef c);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectf_expand1(ref BoundRectf ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectf_expand(ref BoundRectf ret, in BoundRectf r);
		[DllImport(Base.Import)] private static extern bool tsBoundRectf_inside1(in BoundRectf br, in Vector2f v);
		[DllImport(Base.Import)] private static extern bool tsBoundRectf_inside(in BoundRectf br, in BoundRectf r);
		[DllImport(Base.Import)] private static extern float tsBoundRectf_distance(in BoundRectf br, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3f_mul_br(ref BoundRectf ret, in Matrix4x3f m, in BoundRectf r);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4f_mul_br(ref BoundRectf ret, in Matrix4x4f m, in BoundRectf r);
		
		public Vector2f min;
		public Vector2f max;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundRectd {
		
		public BoundRectd(in Vector2d min, in Vector2d max) { this.min = min; this.max = max; }
		public BoundRectd(in BoundRectd r) { min = r.min; max = r.max; }
		public BoundRectd(in BoundRectf r) { BoundRectd ret = new BoundRectd(); tsBoundRectd_set_brf(ref ret, in r); min = ret.min; max = ret.max; }
		public BoundRectd(in BoundCircled c) { BoundRectd ret = new BoundRectd(); tsBoundRectd_set_bc(ref ret, in c); min = ret.min; max = ret.max; }
		
		public void expand(in Vector2d v) { tsBoundRectd_expand1(ref this, in v); }
		public void expand(in BoundRectd r) { tsBoundRectd_expand(ref this, in r); }
		
		public bool inside(in Vector2d v) { return tsBoundRectd_inside1(in this, in v); }
		public bool inside(in BoundRectd r) { return tsBoundRectd_inside(in this, in r); }
		
		public double distance(in Vector2d v) { return tsBoundRectd_distance(in this, in v); }
		
		public static BoundRectd operator*(in Matrix4x3d m, in BoundRectd r) { BoundRectd ret = new BoundRectd(); tsMatrix4x3d_mul_br(ref ret, in m, in r); return ret; }
		public static BoundRectd operator*(in Matrix4x4d m, in BoundRectd r) { BoundRectd ret = new BoundRectd(); tsMatrix4x4d_mul_br(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", min, max); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectd_set_brf(ref BoundRectd ret, in BoundRectf r);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectd_set_bc(ref BoundRectd ret, in BoundCircled c);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectd_expand1(ref BoundRectd ret, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundRectd_expand(ref BoundRectd ret, in BoundRectd r);
		[DllImport(Base.Import)] private static extern bool tsBoundRectd_inside1(in BoundRectd br, in Vector2d v);
		[DllImport(Base.Import)] private static extern bool tsBoundRectd_inside(in BoundRectd br, in BoundRectd r);
		[DllImport(Base.Import)] private static extern float tsBoundRectd_distance(in BoundRectd br, in Vector2d v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3d_mul_br(ref BoundRectd ret, in Matrix4x3d m, in BoundRectd r);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4d_mul_br(ref BoundRectd ret, in Matrix4x4d m, in BoundRectd r);
		
		public Vector2d min;
		public Vector2d max;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundCirclef {
		
		public BoundCirclef(in Vector2f center, float radius) { this.center = center; this.radius = radius; }
		public BoundCirclef(in BoundCirclef c) { center = c.center; radius = c.radius; }
		public BoundCirclef(in BoundCircled c) { BoundCirclef ret = new BoundCirclef(); tsBoundCirclef_set_bcd(ref ret, in c); center = ret.center; radius = ret.radius; }
		public BoundCirclef(in BoundRectf r) { BoundCirclef ret = new BoundCirclef(); tsBoundCirclef_set_br(ref ret, in r); center = ret.center; radius = ret.radius; }
		
		public void expand(in Vector2f v) { tsBoundCirclef_expand1(ref this, in v); }
		public void expand(in BoundCirclef c) { tsBoundCirclef_expand(ref this, in c); }
		
		public void expandRadius(in Vector2f v) { tsBoundCirclef_expandRadius1(ref this, in v); }
		public void expandRadius(in BoundCirclef c) { tsBoundCirclef_expandRadius(ref this, in c); }
		
		public bool inside(in Vector2f v) { return tsBoundCirclef_inside1(in this, in v); }
		public bool inside(in BoundCirclef c) { return tsBoundCirclef_inside(in this, in c); }
		
		public float distance(in Vector2f v) { return tsBoundCirclef_distance(in this, in v); }
		
		public static BoundCirclef operator*(in Matrix4x3f m, in BoundCirclef r) { BoundCirclef ret = new BoundCirclef(); tsMatrix4x3f_mul_bc(ref ret, in m, in r); return ret; }
		public static BoundCirclef operator*(in Matrix4x4f m, in BoundCirclef r) { BoundCirclef ret = new BoundCirclef(); tsMatrix4x4f_mul_bc(ref ret, in m, in r); return ret; }
		
		public override string ToString() { return System.String.Format("{0} : {1}", center, radius); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCirclef_set_bcd(ref BoundCirclef ret, in BoundCircled c);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCirclef_set_br(ref BoundCirclef ret, in BoundRectf r);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCirclef_expand1(ref BoundCirclef ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCirclef_expand(ref BoundCirclef ret, in BoundCirclef c);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCirclef_expandRadius1(ref BoundCirclef ret, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsBoundCirclef_expandRadius(ref BoundCirclef ret, in BoundCirclef c);
		[DllImport(Base.Import)] private static extern bool tsBoundCirclef_inside1(in BoundCirclef bc, in Vector2f v);
		[DllImport(Base.Import)] private static extern bool tsBoundCirclef_inside(in BoundCirclef bc, in BoundCirclef c);
		[DllImport(Base.Import)] private static extern float tsBoundCirclef_distance(in BoundCirclef bc, in Vector2f v);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x3f_mul_bc(ref BoundCirclef ret, in Matrix4x3f m, in BoundCirclef c);
		[DllImport(Base.Import)] private static extern IntPtr tsMatrix4x4f_mul_bc(ref BoundCirclef ret, in Matrix4x4f m, in BoundCirclef c);
		
		public Vector2f center;
		public float radius;
	}
	
	[StructLayout(LayoutKind.Sequential)]
	public struct BoundCircled {
